<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MAIN_STATE" Id="{e2c92245-f691-4409-ac48-db09a370dba8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MAIN_STATE :
(
	uninit,
	idle,
	do_actions,
	move_next,
	done,
	pause,
	error,
	estop
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>